# jules-pymcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
jules_mcp/: __init__.py  __main__.py  agents_md.py  batch.py  cli.py  github_ops.py  jules_mcp.py  prompt.py  self_critic.py  session_watcher.py
scripts/: jules-mcp.service  keep_awake.sh  watch_jules.py  watch_jules.sh
tests/test_jules_mcp/: conftest.py  test_agents_md.py  test_batch.py  test_cli.py  test_github_ops.py  test_mcp_server.py  test_prompt.py  test_self_critic.py  test_session_watcher.py
